Add the project title Dainik Diary

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 // variables
-$background: linear-gradient(135deg, #6ac1c5, #bda5ff);
+$background: linear-gradient(135deg, #0b2c2d, #55026c);
 $secondary-background: rgba(49, 49, 49, 0.916);
 $text: #fff;
 $purple: #a64ac9;
