--- a/css/styles.css
+++ b/css/styles.css
@@ -272,10 +272,23 @@
   color: #fff;
 }
 
-.tri-state-toggle {
-  position: absolute;
-  top: 10px;
-  right: 20px;
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-height: 80px;
+  margin: 0px auto;
+  padding: 32px;
+}
+nav .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav .logo h2 {
+  color: #f1c646;
+}
+nav .tri-state-toggle {
   background: rgba(6, 3, 3, 0.8);
   box-shadow: inset 2px 4px 4px 4px rgba(181, 183, 184, 0.25);
   border-radius: 24px;
@@ -283,7 +296,7 @@
   display: inline-flex;
   transition: all 500ms ease;
 }
-.tri-state-toggle .tri-state-toggle-button {
+nav .tri-state-toggle .tri-state-toggle-button {
   border-radius: 22px;
   height: 44px;
   width: 64px;
@@ -294,25 +307,25 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
-.tri-state-toggle .tri-state-toggle-button.active {
+nav .tri-state-toggle .tri-state-toggle-button.active {
   border: 1px solid white;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
   color: white;
   font-weight: 500;
   transition: all 0.5s ease-in;
 }
-.tri-state-toggle .tri-state-toggle-button:focus {
+nav .tri-state-toggle .tri-state-toggle-button:focus {
   outline: none;
 }
-.tri-state-toggle #toggle-button1.active {
+nav .tri-state-toggle #toggle-button1.active {
   background-image: linear-gradient(135deg, #e0d9f5, #ffffff);
   color: black;
 }
-.tri-state-toggle #toggle-button2.active {
+nav .tri-state-toggle #toggle-button2.active {
   background-image: linear-gradient(90deg, #6ac1c5, #bda5ff);
   color: black;
 }
-.tri-state-toggle #toggle-button3.active {
+nav .tri-state-toggle #toggle-button3.active {
   background-image: linear-gradient(135deg, #2c003e, #0d0d0d);
   color: white;
 }
