--- a/scss/layout/_toggle-switch.scss
+++ b/scss/layout/_toggle-switch.scss
@@ -1,7 +1,23 @@
+ nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-height: 80px;
+  margin: 0px auto;
+  padding: 32px;
+
+  .logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h2{
+      color: #f1c646;
+    }
+  }
+
+  
   .tri-state-toggle {
-    position: absolute;
-    top: 10px;
-    right: 20px;
     background: rgba(6, 3, 3, 0.8);
     box-shadow: inset 2px 4px 4px 4px rgba(181, 183, 184, 0.25);
     border-radius: 24px;
@@ -54,4 +70,4 @@
         }
     }
   }
-  
+} 
