--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $background: linear-gradient(135deg, #0b2c2d, #55026c);
 $secondary-background: rgba(49, 49, 49, 0.916);
 $text: #fff;
 $purple: #a64ac9;
+// $purple: #ffbd03;
 $teal: #1abc9c;
 $delete: #e74c3c;
 $button-hover: #f39c12;
