--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -43,7 +43,7 @@
       .current-date {
         font-size: 1.35rem;
         font-weight: 700;
-        color: $button-hover;
+        color: black;
       }
     }
 
@@ -99,7 +99,7 @@
         }
 
         &.task-marked {
-          color: rgb(2, 83, 2);
+          color: rgb(3, 158, 3);
           border-radius: 50%;
 
           &::after {
