--- a/scss/layout/_todo-container.scss
+++ b/scss/layout/_todo-container.scss
@@ -17,7 +17,7 @@
         flex: 1;
         padding: 12px;
         background-color: $secondary-background;
-        border: 2px solid $purple;
+        border: 1px solid $purple;
         border-radius: 12px;
         outline: none;
         color: $text;
@@ -140,7 +140,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    background: rgba(91, 91, 91, 0.217);
+    background: rgba(91, 91, 91, 0);
     box-shadow: 0 6px 12px $shadow;
     z-index: 1000;
   
@@ -149,9 +149,11 @@
       flex-direction: column;
       gap: 10px;
 
-      h2{
-        color: #f1c646;
-      }
+      // h2{
+      //   // color: #f1c646;
+      //   color: $purple;
+
+      // }
 
       // p{
       //   color: #3c2801;
