Add a json file and that is fetched through the JS, also changes the UI and colors and also various modifications and enhacements are done

--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -1,32 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 #calendar {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Poppins', sans-serif;
+  padding: 24px 32px;
+  
   .wrapper {
-    width: 350px;
-    background: #ead2f4ab;
-    border: 1px solid $purple;
+    width: 250px;
+    background: #c2e5f5a4;
     border-radius: 10px;
-    position: absolute; 
-    left: 20px; 
+    left: 30px; 
 
     header {
       display: flex;
       align-items: center;
-      padding: 15px 20px 5px;
+      padding: 10px 12px 0px;
       justify-content: space-between;
 
       .icons {
         display: flex;
+        align-items: center;
+        justify-content: center;
 
         span {
-          height: 38px;
-          width: 38px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 24px;
+          width: 24px;
           margin: 0 1px;
           cursor: pointer;
-          color: #878787;
+          color: navy;
           text-align: center;
-          line-height: 38px;
-          font-size: 1.9rem;
+          line-height: 30px;
+          font-size: 1.4rem;
           user-select: none;
           border-radius: 50%;
 
@@ -35,20 +43,20 @@
           }
 
           &:hover {
-            background: #f2f2f2;
+            background: #50b9e0;
           }
         }
       }
 
       .current-date {
-        font-size: 1.35rem;
+        font-size: 1.2rem;
         font-weight: 700;
-        color: black;
+        color: rgb(0, 0, 51);
       }
     }
 
     .calendar {
-      padding: 15px;
+      padding: 5px;
 
       ul {
         display: flex;
@@ -58,17 +66,16 @@
       }
 
       .days {
-        margin-bottom: 20px;
+        margin-bottom: 15px;
       }
 
       li {
         color: #333;
         width: calc(100% / 7);
-        font-size: 1.04rem;
+        font-size: 0.8rem;
         position: relative;
         z-index: 1;
         cursor: pointer;
-        padding: 5px;
 
         &.inactive {
           color: #aaa;
@@ -78,7 +85,7 @@
           color: #fff;
 
           &::before {
-            background: #9B59B6;
+            background: rgb(255, 95, 26);
           }
         }
 
@@ -87,29 +94,28 @@
           content: "";
           left: 50%;
           top: 50%;
-          height: 30px;
-          width: 30px;
+          height: 20px;
+          width: 20px;
           z-index: -1;
           border-radius: 50%;
           transform: translate(-50%, -50%);
         }
 
         &:not(.active):hover::before {
-          border: 1px solid #f2f2f2;
+          border: 1px solid #0a0a0a;
         }
 
         &.task-marked {
-          color: rgb(3, 158, 3);
+          color: rgb(255, 38, 0);
           border-radius: 50%;
 
           &::after {
-            content: '📝';
+            content: '📅';
             position: absolute;
             top: 30%;
             right: 0%;
             transform: translate(-50%, -50%);
-            font-size: 8px;
-            color: black;
+            font-size: 6px;
           }
         }
       }
@@ -125,10 +131,66 @@
         li {
           font-weight: 500;
           cursor: default;
-          color: $purple;
-          padding: 10px;
+          color: navy;
+          padding: 8px;
         }
       }
     }
+  }
+  .calendar-box{
+    max-width: 250px;
+    height: auto;
+    margin-top: 10px;
+    border-radius: 10px;
+    padding: 10px;
+    background: #c2e5f5;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    color: #0a0a0a;
+
+    .date{
+      display: flex;
+      gap: 5px;
+      margin-bottom: 1px;
+  
+      i{
+        color: #184962;
+      }
+  
+      .today-date{
+        color: #184962;
+      }
+    }
+
+    .tithi{
+      // margin-bottom: 1px;
+      font-size: 16px;
+    }
+
+    .current-time{
+      // margin-bottom: 2px;
+      font-size: 12px;
+      font-style: normal;
+    }
+
+    .events{
+      margin-bottom: 2px;
+      font-size: 14px;
+      font-style: italic;
+      color: #333;
+    }
+
+    .public-holiday{
+      font-size: 12px;
+      font-style: italic;
+
+      .holiday{
+        font-size: 12px;
+        font-weight: bold;
+      }
+    }
+
+
+
+
   }
 }
