--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,40 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+#calendar {
+  display: flex;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif;
+  padding: 24px 32px;
+}
 #calendar .wrapper {
-  width: 350px;
-  background: rgba(234, 210, 244, 0.6705882353);
-  border: 1px solid #a64ac9;
+  width: 250px;
+  background: rgba(194, 229, 245, 0.6431372549);
   border-radius: 10px;
-  position: absolute;
-  left: 20px;
+  left: 30px;
 }
 #calendar .wrapper header {
   display: flex;
   align-items: center;
-  padding: 15px 20px 5px;
+  padding: 10px 12px 0px;
   justify-content: space-between;
 }
 #calendar .wrapper header .icons {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 #calendar .wrapper header .icons span {
-  height: 38px;
-  width: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 24px;
+  width: 24px;
   margin: 0 1px;
   cursor: pointer;
-  color: #878787;
+  color: navy;
   text-align: center;
-  line-height: 38px;
-  font-size: 1.9rem;
+  line-height: 30px;
+  font-size: 1.4rem;
   user-select: none;
   border-radius: 50%;
 }
@@ -33,15 +42,15 @@
   margin-right: -10px;
 }
 #calendar .wrapper header .icons span:hover {
-  background: #f2f2f2;
+  background: #50b9e0;
 }
 #calendar .wrapper header .current-date {
-  font-size: 1.35rem;
+  font-size: 1.2rem;
   font-weight: 700;
-  color: black;
+  color: rgb(0, 0, 51);
 }
 #calendar .wrapper .calendar {
-  padding: 15px;
+  padding: 5px;
 }
 #calendar .wrapper .calendar ul {
   display: flex;
@@ -50,16 +59,15 @@
   text-align: center;
 }
 #calendar .wrapper .calendar .days {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 #calendar .wrapper .calendar li {
   color: #333;
   width: 14.2857142857%;
-  font-size: 1.04rem;
+  font-size: 0.8rem;
   position: relative;
   z-index: 1;
   cursor: pointer;
-  padding: 5px;
 }
 #calendar .wrapper .calendar li.inactive {
   color: #aaa;
@@ -68,34 +76,33 @@
   color: #fff;
 }
 #calendar .wrapper .calendar li.active::before {
-  background: #9B59B6;
+  background: rgb(255, 95, 26);
 }
 #calendar .wrapper .calendar li::before {
   position: absolute;
   content: "";
   left: 50%;
   top: 50%;
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   z-index: -1;
   border-radius: 50%;
   transform: translate(-50%, -50%);
 }
 #calendar .wrapper .calendar li:not(.active):hover::before {
-  border: 1px solid #f2f2f2;
+  border: 1px solid #0a0a0a;
 }
 #calendar .wrapper .calendar li.task-marked {
-  color: rgb(3, 158, 3);
+  color: rgb(255, 38, 0);
   border-radius: 50%;
 }
 #calendar .wrapper .calendar li.task-marked::after {
-  content: "📝";
+  content: "📅";
   position: absolute;
   top: 30%;
   right: 0%;
   transform: translate(-50%, -50%);
-  font-size: 8px;
-  color: black;
+  font-size: 6px;
 }
 #calendar .wrapper .calendar .light-mode li:not(.active):hover::before {
   border: 1px solid black;
@@ -106,17 +113,59 @@
 #calendar .wrapper .calendar .weeks li {
   font-weight: 500;
   cursor: default;
-  color: #a64ac9;
+  color: navy;
+  padding: 8px;
+}
+#calendar .calendar-box {
+  max-width: 250px;
+  height: auto;
+  margin-top: 10px;
+  border-radius: 10px;
   padding: 10px;
+  background: #c2e5f5;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  color: #0a0a0a;
+}
+#calendar .calendar-box .date {
+  display: flex;
+  gap: 5px;
+  margin-bottom: 1px;
+}
+#calendar .calendar-box .date i {
+  color: #184962;
+}
+#calendar .calendar-box .date .today-date {
+  color: #184962;
+}
+#calendar .calendar-box .tithi {
+  font-size: 16px;
+}
+#calendar .calendar-box .current-time {
+  font-size: 12px;
+  font-style: normal;
+}
+#calendar .calendar-box .events {
+  margin-bottom: 2px;
+  font-size: 14px;
+  font-style: italic;
+  color: #333;
+}
+#calendar .calendar-box .public-holiday {
+  font-size: 12px;
+  font-style: italic;
+}
+#calendar .calendar-box .public-holiday .holiday {
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 40px auto 0 auto;
-  max-width: 500px;
+  margin: 0 0 0 50px;
+  padding: 32px;
+  width: 500px;
+  gap: 20px;
 }
 .container form {
   margin-top: 0px;
@@ -126,17 +175,16 @@
 }
 .container form input {
   flex: 1;
-  padding: 12px;
-  background-color: rgba(49, 49, 49, 0.916);
-  border: 1px solid #a64ac9;
+  padding: 10px;
+  background-color: rgba(199, 238, 248, 0.2980392157);
+  border: 1px solid #537384;
   border-radius: 12px;
   outline: none;
-  color: #fff;
+  color: #0f0f0f;
   transition: border 0.3s ease, box-shadow 0.3s ease;
 }
 .container form input:focus {
-  border-color: #1abc9c;
-  box-shadow: 0 0 8px rgba(255, 204, 102, 0.5);
+  border-color: #030b0e;
 }
 .container form button {
   padding: 16px;
@@ -146,7 +194,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #1abc9c;
+  background-color: #116189;
   color: #fff;
   font-size: 30px;
   font-weight: bold;
@@ -154,11 +202,13 @@
   transition: background-color 0.3s ease, transform 0.2s ease;
 }
 .container form button:hover {
-  background-color: #f39c12;
   transform: rotate(15deg);
+  background-color: #042332;
+  box-shadow: 0 0 8px #03a6f7;
 }
 .container form button:active {
   transform: scale(0.95);
+  box-shadow: 0 0 8px #03a6f7;
 }
 .container .task-list {
   list-style: none;
@@ -170,22 +220,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.6);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  padding: 12px;
-  border-radius: 12px;
-  margin-bottom: 10px;
+  font-size: medium;
+  font-weight: 200;
+  font-family: Poppins, "Helvet";
+  color: #0f0f0f;
+  padding: 5px;
+  margin-bottom: 8px;
   transition: box-shadow 0.3s ease;
-}
-.container .task-list li:hover {
-  background-color: rgba(49, 49, 49, 0.916);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid linear-gradient(135deg, #0b2c2d, #55026c);
 }
 .container .task-list li .taskItem {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  border-bottom: 1px solid black;
 }
 .container .task-list li .taskItem .task {
   display: flex;
@@ -193,21 +242,24 @@
 }
 .container .task-list li .taskItem .task.completed p {
   text-decoration: line-through;
-  color: #1abc9c;
 }
 .container .task-list li .taskItem .task input[type=checkbox] {
   margin-right: 12px;
+  height: 15px;
+  width: 15px;
+  border-radius: 100%;
 }
 .container .task-list li .taskItem .task p {
   margin: 0;
-  color: #fff;
-  font-weight: bold;
+  color: #0f0f0f;
+  font-weight: 100;
 }
 .container .task-list li .taskItem .icons {
   display: flex;
   gap: 12px;
 }
 .container .task-list li .taskItem .icons i {
+  font-size: 12px;
   cursor: pointer;
   transition: color 0.3s ease, transform 0.2s ease;
 }
@@ -219,61 +271,14 @@
   color: #e74c3c;
 }
 .container .task-list li .taskItem .icons i.edit {
-  color: #ffcc70;
-}
-
-.stats-container {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  padding: 20px;
-  border-radius: 12px;
-  border: 1px solid #a64ac9;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  background: rgba(91, 91, 91, 0);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-}
-.stats-container .details {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.stats-container .details #progressBar {
-  width: 200px;
-  height: 15px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
-  overflow: hidden;
-  position: relative;
-}
-.stats-container .details #progressBar #progress {
-  width: 0%;
-  height: 100%;
-  background-color: #1abc9c;
-  border-radius: 8px;
-  transition: width 0.3s ease;
-}
-.stats-container .stats-number {
-  width: 100px;
-  height: 100px;
-  background: #a64ac9;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  font-size: 30px;
-  font-weight: bold;
-  color: #fff;
+  color: #ffa600;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-height: 80px;
+  max-height: 60px;
   margin: 10px auto;
   padding: 10px 32px;
   border-bottom: 1px solid gray;
@@ -284,7 +289,7 @@ nav .logo {
   align-items: center;
 }
 nav .logo h2 {
-  color: #a64ac9;
+  color: #042332;
 }
 nav .tri-state-toggle {
   background: rgba(6, 3, 3, 0.8);
@@ -320,12 +325,61 @@ nav .tri-state-toggle #toggle-button1.active {
   color: black;
 }
 nav .tri-state-toggle #toggle-button2.active {
-  background-image: linear-gradient(90deg, #6ac1c5, #bda5ff);
+  background-image: linear-gradient(90deg, #87ceeb, #9dd6ee, #9dd6ee, #91cfe8, #87ceeb);
   color: black;
 }
 nav .tri-state-toggle #toggle-button3.active {
   background-image: linear-gradient(135deg, #2c003e, #0d0d0d);
   color: white;
+}
+
+.stats-container {
+  position: fixed;
+  bottom: 32px;
+  right: 32px;
+  padding: 8px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background: rgba(196, 217, 225, 0.468);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+}
+.stats-container .details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.stats-container .details p {
+  color: #184962;
+}
+.stats-container .details #progressBar {
+  width: 150px;
+  height: 10px;
+  background-color: rgba(0, 0, 0, 0.174);
+  border-radius: 8px;
+  overflow: hidden;
+  position: relative;
+}
+.stats-container .details #progressBar #progress {
+  width: 0%;
+  height: 100%;
+  background-color: #184962;
+  border-radius: 8px;
+  transition: width 0.3s ease;
+}
+.stats-container .stats-number {
+  width: 50px;
+  height: 50px;
+  background: #184962;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
 }
 
 * {
@@ -338,6 +392,14 @@ body {
   color: #fff;
   font-family: "Comic Sans MS", cursive, sans-serif;
   height: 100vh;
+}
+
+.dark-mode .body-wrapper nav .logo {
+  color: #fff !important;
+}
+
+.hero {
+  display: flex;
 }
 
 /*# sourceMappingURL=styles.css.map */
