--- a/scss/layout/_todo-container.scss
+++ b/scss/layout/_todo-container.scss
@@ -1,11 +1,11 @@
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 40px auto 0 auto;
-    max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 0 50px;
+  padding: 32px;
+  width: 500px;
+  gap: 20px;
   
     form {
       margin-top: 0px;
@@ -15,17 +15,16 @@
   
       input {
         flex: 1;
-        padding: 12px;
-        background-color: $secondary-background;
-        border: 1px solid $purple;
+        padding: 10px;
+        background-color: #c7eef84c;
+        border: 1px solid #537384;
         border-radius: 12px;
         outline: none;
-        color: $text;
+        color: #0f0f0f;
         transition: border 0.3s ease, box-shadow 0.3s ease;
   
         &:focus {
-          border-color: $teal;
-          box-shadow: 0 0 8px $input-focus;
+          border-color: #030b0e;
         }
       }
   
@@ -37,7 +36,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: $teal;
+        background-color: #116189;
+
         color: $text;
         font-size: 30px;
         font-weight: bold;
@@ -45,12 +45,17 @@
         transition: background-color 0.3s ease, transform 0.2s ease;
   
         &:hover {
-          background-color: $button-hover;
           transform: rotate(15deg);
+          background-color: #042332;
+          box-shadow: 0 0 8px #03a6f7;
+
+
         }
   
         &:active {
           transform: scale(0.95);
+          box-shadow: 0 0 8px #03a6f7;
+
         }
       }
     }
@@ -65,23 +70,21 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color: $task;
-        box-shadow: 0 4px 12px $shadow;
-        padding: 12px;
-        border-radius: 12px;
-        margin-bottom: 10px;
+        font-size: medium;
+        font-weight: 200;
+        font-family: Poppins, "Helvet";
+        color: #0f0f0f;
+        padding: 5px;
+        margin-bottom: 8px;
         transition: box-shadow 0.3s ease;
-  
-        &:hover {
-          background-color: $secondary-background;
-          box-shadow: 0 6px 12px $shadow;
-        }
+        border-bottom: 1px solid $background;
   
         .taskItem {
           display: flex;
           justify-content: space-between;
           align-items: center;
           width: 100%;
+          border-bottom: 1px solid black;
   
           .task {
             display: flex;
@@ -89,17 +92,20 @@
   
             &.completed p {
               text-decoration: line-through;
-              color: $teal;
             }
   
             input[type="checkbox"] {
               margin-right: 12px;
+              height: 15px;
+              width: 15px;
+              border-radius: 100%;
             }
   
             p {
               margin: 0;
-              color: $text;
-              font-weight: bold;
+              color: #0f0f0f;
+              font-weight: 100;
+             
             }
           }
   
@@ -108,6 +114,7 @@
             gap: 12px;
   
             i {
+              font-size: 12px;
               cursor: pointer;
               transition: color 0.3s ease, transform 0.2s ease;
   
@@ -121,7 +128,7 @@
               }
   
               &.edit {
-                color: #ffcc70;
+                color: #ffa600;
               }
             }
           }
@@ -129,65 +136,3 @@
       }
     }
   }
-  
-  .stats-container {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    padding: 20px;
-    border-radius: 12px;
-    border: 1px solid $purple;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    background: rgba(91, 91, 91, 0);
-    box-shadow: 0 6px 12px $shadow;
-    z-index: 1000;
-  
-    .details {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-
-      // h2{
-      //   // color: #f1c646;
-      //   color: $purple;
-
-      // }
-
-      // p{
-      //   color: #3c2801;
-      // }
-  
-      #progressBar {
-        width: 200px; 
-        height: 15px;
-        background-color: rgba(0, 0, 0, 0.5);
-        border-radius: 8px;
-        overflow: hidden;
-        position: relative;
-  
-        #progress {
-          width: 0%;
-          height: 100%;
-          background-color: $teal;
-          border-radius: 8px;
-          transition: width 0.3s ease;
-        }
-      }
-    }
-  
-    .stats-number {
-      width: 100px;
-      height: 100px;
-      background: $purple;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      font-size: 30px;
-      font-weight: bold;
-      color: $text;
-    }
-  }
-  
