--- a/scss/layout/_toggle-switch.scss
+++ b/scss/layout/_toggle-switch.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-height: 80px;
+  max-height: 60px;
   margin: 10px auto;
   padding: 10px 32px;
   border-bottom:1px solid gray ;
@@ -13,9 +13,7 @@
     align-items: center;
 
     h2{
-      // color: #f1c646;
-      color: $purple;
-
+      color: #042332;
     }
   }
   
@@ -58,10 +56,7 @@
     }
     #toggle-button2{
         &.active{
-            background-image: linear-gradient(
-                90deg,
-                #6ac1c5, #bda5ff
-            );
+            background-image:linear-gradient(90deg, #87ceeb, #9dd6ee, #9dd6ee, #91cfe8, #87ceeb);
             color: black;
         }
     }
