--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,6 +15,7 @@ body {
   color: $text;
   font-family: 'Comic Sans MS', cursive, sans-serif;
   height: 100vh;
+
 }
 
 .dark-mode .body-wrapper nav .logo {
@@ -26,5 +27,11 @@ body {
 
 .hero{
   display: flex;
+
+  @media (max-width:670px){
+      display: flex;
+      flex-direction: column;
+
+  }
 }
 
