remove class task-marked

--- a/scss/layout/_calendar.scss
+++ b/scss/layout/_calendar.scss
@@ -103,7 +103,7 @@
 
         &.task-marked {
           color: rgb(255, 38, 0);
-          border-radius: 50%;
+          // border-radius: 50%;
 
           &::after {
             content: "📅";
